# zen-object-viewer

./: README.adoc  meson.build
assets/: default_text.stl  obj_viewer.stl
assets/icon/: 3d_viewer_icon.gltf
assets/roof/: roof.gltf
shaders/: floor.frag  floor.vert  meson.build
src/: default.frag  default.vert  foundation.cc  foundation.h  main.cc  meson.build  viewer.cc  viewer.h
src/gltf/: gltf.frag  gltf.vert  jpeg-texture.cc  main.cc  meson.build
src/stl/: default.frag  file-reader.h  meson.build
